# AuthModeler

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
.hypothesis/constants/: 0b9ed3e03422e566  1af3d16ccf61d7c6  2ffac9ca152c91b6  337e284a3f4fd241  3c73c268b0c92840  481196306ef1a730  48445b9611a423ca  4a1f0a6e9fb4bb3e  4e83e01d304599b4  67f3f060aac3c3fd  8ba73a5400a3c9da  9efc51fd639ed5ec  b2abe9637f081b51  cbaece3fe9432828  e804be180bc2d8e2
.hypothesis/examples/03fae27f7f76ec14/: 7865f118c783a7c9
.hypothesis/examples/04e6b3400353b141/: 03fae27f7f76ec14  03fbf6c66bdec530  1059151d56cd0624  15b2ce579602b7a3  19e2ed0c100f7d77  1b91908db50e5694  20251866dfcb9603  2965172e3edfc86f  2ba6c16caffaa42a  3028e08348e0e60f  3224de0e7c6d485c  375cf534423b0f37  3cc432466781688c  4433d863a8f61d43  4701ab9162424622  4863a3e08d2553a9  5195103b0320fae9  590e2e8ebcfccc33  6ce46fbd85a1e3e4  6ebc79eb1afe3342  78c650fa673e7e54  85f9046236deb600  91d3184c954a3b65  abf34ec2520afc87  b5bbffec4757a9de  b67f80667f544b3b  b926d4c1283de491  bdc29ae4ecd15fd8  c66380600f3c6a7e  ed7f1b008e44d460  f420649871d448c4  fc7da2f5c1956d9b  fded41c636d3dd1e
.hypothesis/examples/19e2ed0c100f7d77/: 99a96154d31bf2ca
.hypothesis/examples/3cc432466781688c/: 125853ed32fd47cf
.hypothesis/examples/4433d863a8f61d43/: 298031bca871aca1  f8bf4fa9b424a0cb
.hypothesis/examples/5195103b0320fae9/: 6d06ac855269f361
.hypothesis/examples/6ce46fbd85a1e3e4/: 209660410a810de5  a1d268bea9664ec9
.hypothesis/examples/6ebc79eb1afe3342/: b42c7bfa9436c964
.hypothesis/examples/78c650fa673e7e54/: 62679f263056ca21  eb88ceba767376a1
.hypothesis/examples/85f9046236deb600/: 2d67f41861fe2387
.hypothesis/examples/91d3184c954a3b65/: 33b04f1fa55a83b5  47858b39480a605d  75f2562363a064ea  c99f6ce3177e592a
.hypothesis/examples/abf34ec2520afc87/: 96d6e46cfef3f16e
.hypothesis/examples/b5bbffec4757a9de/: 02f1d1705458790b  04cb712805591154  1127e7621e533dae  183f1972bec3a350  20e37694368135ed  2c9f3ca852098ea4  3d7720aaf1ea0566  4925ea3eaa8673d7  668571d8aaea973e  725269e47d169773  760b11eab4c5e1f9  789e82cd2c03f84d  8106f619c1a79f5d  8a504de0c975ea43  8d4af82c17778004  90b7ca7adab11f68  96f0bf05b11ebe40  a1e4b92c57d3c5fa  a9aaa2e6c2159386  af03da9619e797a0  b88346b3b94b6c5d  b9b9d51d47ca9820  bc86d38ef673d288  c9b5426d8556d2bb  cd1caeee1fa63a39  e5e679a168c48bf0  e93f6c42e96fed7a  ea3b7953affec478  f4bfdba07228fab9  f9744ae76684aad9  fbe986980fdddcc5  fe3c88b92edaa038
.hypothesis/examples/b926d4c1283de491/: 35ae7e4609c89444  80733587d5db03e8
.hypothesis/examples/bdc29ae4ecd15fd8/: 27b1795fd87fdfdb  d2e8828cfd64c70c  ef90edc8e57efa07
.hypothesis/examples/ed7f1b008e44d460/: 01ff659e63634e0d
.hypothesis/examples/fc7da2f5c1956d9b/: fc9fd05e866b2857
.hypothesis/examples/fded41c636d3dd1e/: 64bab4c27125fedb
.hypothesis/tmp/: tmp40qb6ctw  tmp_4z0vy5g  tmpebe9x3nz  tmpkmngtd_k  tmpspome0jv
examples/: dc_login_monitoring_example.py  login_monitoring_example.py  service_authentication_example.py
specs/alloy/core/: attacker.als  crypto.als  types.als
specs/alloy/kerberos/: attacks.als  properties.als  protocol.als
specs/alloy/ntlm/: properties.als  protocol.als
specs/promela/: kerberos.pml  ntlm.pml
specs/tla/: AS_Exchange.cfg  AS_Exchange.tla  Kerberos.cfg  Kerberos.tla  KerberosAttacks.cfg  KerberosAttacks.tla  KerberosProps.tla  NTLM.tla
src/authmodeler/: __init__.py
src/authmodeler/ad/: __init__.py  authenticator.py
src/authmodeler/core/: __init__.py  crypto.py  exceptions.py  state_machine.py  types.py
src/authmodeler/kerberos/: __init__.py  as_exchange.py  client.py  replay_cache.py  service.py  types.py
src/authmodeler/monitoring/: __init__.py  login_monitor.py
src/authmodeler/monitoring/eventlog/: __init__.py  correlator.py  dc_monitor.py  reader.py  subscription.py  types.py
src/authmodeler/ntlm/: __init__.py  client.py  types.py
src/authmodeler/transport/: __init__.py  gssapi_wrapper.py  kdc_transport.py  native_client.py  sspi_wrapper.py
tests/: __init__.py  conftest.py
tests/property/: __init__.py  test_crypto_properties.py  test_protocol_properties.py
tests/unit/: __init__.py  test_core_crypto.py  test_core_types.py  test_kerberos_client.py  test_ntlm_client.py
