[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "authmodeler"
version = "0.1.0"
description = "Formally verified authentication system for on-premises Active Directory"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Keith", email = "keith@example.com" }
]
keywords = [
    "authentication",
    "kerberos",
    "ntlm",
    "active-directory",
    "formal-verification",
    "security"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration :: Authentication/Directory",
    "Typing :: Typed",
]

dependencies = [
    # Active Directory / LDAP
    "ldap3>=2.9.1",

    # Kerberos Support
    "gssapi>=1.8.0",

    # Cryptography
    "cryptography>=41.0.0",

    # ASN.1 encoding for Kerberos
    "pyasn1>=0.5.0",
    "pyasn1-modules>=0.3.0",

    # Type safety and immutability
    "attrs>=23.2.0",
    "cattrs>=23.2.0",

    # Result types for error handling
    "returns>=0.22.0",

    # Structured logging
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",

    # Property-based testing
    "hypothesis>=6.92.0",

    # Type checking
    "mypy>=1.8.0",

    # Linting and formatting
    "ruff>=0.1.9",

    # Design by contract (runtime checks)
    "deal>=4.24.0",
    "typeguard>=4.1.0",
]

docs = [
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/AlchemicalChef/AuthModeler"
Documentation = "https://github.com/AlchemicalChef/AuthModeler#readme"
Repository = "https://github.com/AlchemicalChef/AuthModeler.git"
Issues = "https://github.com/AlchemicalChef/AuthModeler/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/authmodeler"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "unit: Unit tests",
    "property: Property-based tests",
    "conformance: Spec conformance tests",
    "integration: Integration tests requiring AD",
    "slow: Slow tests",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
show_error_codes = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = [
    "ldap3.*",
    "gssapi.*",
    "pyasn1.*",
    "pyasn1_modules.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "S",      # flake8-bandit (security)
    "N",      # pep8-naming
    "RUF",    # ruff-specific
]
ignore = [
    "S101",   # Allow assert statements (used in tests)
    "S311",   # Allow random for non-crypto purposes
]

[tool.ruff.isort]
known-first-party = ["authmodeler"]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # Allow asserts in tests
    "ARG",    # Allow unused arguments in fixtures
]

[tool.coverage.run]
source = ["src/authmodeler"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
show_missing = true
fail_under = 80

[tool.hypothesis]
profile = "default"

[tool.hypothesis.profiles.default]
max_examples = 100
deadline = 1000

[tool.hypothesis.profiles.ci]
max_examples = 500
deadline = 2000
